[package]
name = "digit-layout"
description = "Define memory layout of digital types as `[sign|exponent|mantissa; N]`"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]
repository = "https://github.com/YdrMaster/digit-layout.git"
documentation = "https://docs.rs/digit-layout"
license = "MIT"
readme = "README.md"
keywords = ["digit", "layout", "data-type"]
categories = ["no-std::no-alloc"]

[dependencies]
half_ = { version = "2.4", package = "half", optional = true }

[features]
default = ["half"]
half = ["half_"]
