[package]
name = "digit-layout"
description = "This crate provides a unified data type definition across various libraries, efficiently encodes types in a compact layout, thus avoiding the redundancy of enumerating definitions for data types."
version = "0.1.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]
repository = "https://github.com/YdrMaster/digit-layout.git"
documentation = "https://docs.rs/digit-layout"
license = "MIT"
readme = "README.md"
keywords = ["digit", "layout", "data-type"]
categories = ["no-std::no-alloc"]

[dependencies]
half = { version = "2.4", optional = true }

[features]
default = ["half"]
